[package]
name = "the-sprawl"
version = "0.1.0"
authors = ["Kevin Fleming <kvnflm@gmail.com>"]
edition = "2018"

[[bin]]
name = "the-sprawl"
path = "src/bin/main.rs"

[dependencies]
ahash = "0.4.4"
crossbeam-channel = "0.4.3"
csv = "1.1.3"
derive_more = "0.99.9"
indexmap = "1.5.1"
line_drawing = "0.8.0"
pathfinding = "2.0.4"
pixels = "0.2.0"
rand = "0.7.3"
rand_distr = "0.3.0"
rusttype = "0.9.2"
winit = "0.22.2"
winit_input_helper = "0.7.0"
